--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".LandingActivity" />
         <activity android:name=".SignupActivity" />
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".ChannelDetailActivity"></activity>
     </application>
 
 </manifest>
