--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".LandingActivity" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".HomeActivity" />
-        <activity android:name=".ChannelDetailActivity"></activity>
+        <activity android:name=".ChannelDetailActivity" />
+        <activity android:name=".PostDetailActivity"></activity>
     </application>
 
 </manifest>
