Revert "Menambahkan New Post"
This reverts commit 28b0d0f750b919b4d5070f9fd8a9d76bb345c374.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
         <activity android:name=".SignupActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".ChannelDetailActivity" />
-        <activity android:name=".PostDetailActivity" />
-        <activity android:name=".NewPostActivity"></activity>
+        <activity android:name=".PostDetailActivity"></activity>
     </application>
 
 </manifest>
